<resources>
    <string name="google_maps_key">AIzafake</string>
    <string name="admob_id">ca-app-pub-fake</string>
    <string name="admob_banner_unit_id">ca-app-pub-fake</string>
    <string name="admob_interstitial_unit_id">ca-app-pub-fake</string>
    <string name="oauth_token">fakeapp.apps.googleusercontent.com</string>
    <string name="browser_key">AIzafake</string>
    <string name="app_name">Trippo</string>
    <string name="catalogue_name">Catalogue</string>
    <string name="nearby_name">Nearby Places</string>
    <string name="open_source_name">Open Source Libraries</string>
    <string name="settings_name">Settings</string>
    <string name="auth_name">Login</string>
    <string name="main_button_text">Where do you want to go?</string>
    <string name="browse_button_text">Browse guides</string>
    <string name="nearby_button_text">Nearby Places</string>
    <string name="cities_of">Cities of %s</string>
    <string name="regions_of">Regions of %s</string>
    <string name="national_parks_of">National parks of %s</string>
    <string name="islands_of">Islands of %s</string>
    <string name="sightseeing_in">Sightseeing venues in %s</string>
    <string name="eat_and_drink_in">Eat &amp; drink venues in %s</string>
    <string name="nightlife_in">Nightlife venues in %s</string>
    <string name="hotel_in">Hotel venues in %s</string>
    <string name="tours_in">Tours in %s</string>
    <string name="activities_in">Activities in %s</string>
    <string name="multi_day_tours_in">Multi day tours in %s</string>
    <string name="day_trips_in">Day trips in %s</string>
    <string name="city_walking_in">City walking in %s</string>
    <string name="in_country">%s in %s</string>
    <string name="of_country">%s of %s</string>
    <string name="city_placeholder" translatable="false">city</string>
    <string name="region_placeholder" translatable="false">region</string>
    <string name="national_park_placeholder" translatable="false">national_park</string>
    <string name="island_placeholder" translatable="false">island</string>
    <string name="sightseeing_placeholder" translatable="false">sightseeing</string>
    <string name="eat_and_drink_placeholder" translatable="false">eatingout</string>
    <string name="nightlife_placeholder" translatable="false">nightlife</string>
    <string name="hotel_placeholder" translatable="false">hotels</string>
    <string name="tours_placeholder" translatable="false">private_tours</string>
    <string name="activities_placeholder" translatable="false">do</string>
    <string name="multi_day_tours_placeholder" translatable="false">multiday</string>
    <string name="day_trips_placeholder" translatable="false">daytrips</string>
    <string name="city_walking_placeholder" translatable="false">walkingtours</string>
    <string name="background_placeholder" translatable="false">background</string>
    <string name="about_menu_text">About</string>
    <string name="settings_menu_text">Settings</string>
    <string name="feedback_menu_text">Send feedback</string>
    <string name="share_menu_text">Share</string>
    <string name="back_press_text">Press back once more to exit.</string>
    <string name="search_hint">Search Trippo</string>
    <string name="search_title">Search</string>
    <string name="favorites_title">Favorites</string>
    <string name="sensor_warning_text">This option is not available in this version.</string>
    <string name="image_cache_info_text">Image cache successfully deleted.</string>
    <string name="db_remove_info_text">Application database successfully removed.</string>
    <string name="add_to_favorites_menu_text">Add to favorites</string>
    <string name="remove_from_favorites_menu_text">Remove from favorites</string>
    <string name="delete_all_favorites_menu_text">Delete all</string>
    <string name="show_in_map_menu_text">Show in map</string>
    <string name="book_menu_text">Book</string>
    <string name="map_only_mode_warning_text">This option is not available in Map-only mode.</string>
    <string name="dismiss_action_text">DIsmIss</string>
    <string name="settings_action_text">SettIngs</string>
    <string name="action_back">Back</string>
    <string name="action_forward">Forward</string>
    <string name="book_via">Book via %s</string>
    <string name="content_settings_title">Content settings</string>
    <string name="map_settings_title">Map settings</string>
    <string name="article_settings_title">Article settings</string>
    <string name="constraint_exception_text">You have already added %s to your favorite list.</string>
    <string name="database_adding_info_text">You have successfully added %s to your favorite list.</string>
    <string name="item_deleted_info_text">You have successfully removed %s from your favorite list.</string>
    <string name="all_item_deleted_info_text">You have successfully removed all items from your favorite list.</string>
    <string name="no_tts_found_title">No TTS found</string>
    <string name="no_tts_found_text">You need to download English TTS in order to continue.</string>
    <string name="tts_lang_not_supported_warning_text">Language is not supported. Please select a valid language.</string>
    <string name="tts_init_failed_warning_text">TTS couldn\'t be initialized. Please try again later.</string>
    <string name="my_account_menu_text">My Account</string>
    <string name="sign_in_alert">Please sign in first in order to continue.</string>
    <string name="sign_in_action_text">sIgn In</string>
    <string name="coming_soon_text">Community is coming soon. Stay tuned!</string>
    <string name="license_dialog">Author: %s\nLicense: %s</string>
    <string name="app_update_title">App update is available</string>
    <string name="app_update_text">You have to update Trippo to the latest version in order to use.</string>
    <string name="update_button">Update</string>
    <string name="exit_button">Exit</string>
    <string name="catalogue_image_view_content_description">This ImageView represents images for each country.</string>
    <string name="parts_of_country_image_view_content_description">This ImageView represents images for each part of selected country.</string>
    <string name="main_image_view_content_description">This ImageView represents the background for Main Activity.</string>
    <string name="onboarding_image_view_content_description">This ImageView represents icons for Onboarding Activity.</string>
    <string name="overflow_image_view_content_description">This ImageView represents overflow menu for some actions.</string>
    <string name="tablet_bg_image_view_content_description">This ImageView represents background image for tablets.</string>
    <string name="detail_image_view_content_description">This ImageView represents image for collapsing toolbar layout.</string>
    <string name="onboarding_first_title">Welcome to Trippo</string>
    <string name="onboarding_first_desc">If you love traveling, Trippo will be your best friend!</string>
    <string name="onboarding_second_title">POIs</string>
    <string name="onboarding_second_desc">Have plenty of POIs for selected locations to join an activity immediately!</string>
    <string name="onboarding_third_title">Nearby Places</string>
    <string name="onboarding_third_desc">Discover new and unique places around you!</string>
    <string name="onboarding_fourth_title">Country Catalogue</string>
    <string name="onboarding_fourth_desc">View the country catalogue and save what you like in order to access later!</string>
    <string name="restaurants">Restaurants</string>
    <string name="cafes">Cafes</string>
    <string name="gas_stations">Gas stations</string>
    <string name="atms">ATMs</string>
    <string name="pharmacies">Pharmacies</string>
    <string name="groceries">Groceries</string>
    <string name="cities_button_text">Cities</string>
    <string name="regions_button_text">Regions</string>
    <string name="national_parks_button_text">National parks</string>
    <string name="islands_button_text">Islands</string>
    <string name="country_details_fifth_header_text">Travel Reference</string>
    <string name="background_button_text">Background</string>
    <string name="practicalities_button_text">Practicalities</string>
    <string name="nearby_places_header">Nearby Places</string>
    <string name="notifications_places_header">Notifications</string>
    <string name="radius_title">Radius</string>
    <string name="radius_key" translatable="false">radius</string>
    <string name="km_1500_radius_value" translatable="false">1500</string>
    <string name="sensor_title">Sensor</string>
    <string name="sensor_subtext">It is to indicate if your phone uses sensor to determine your location.</string>
    <string name="sensor_key">sensor</string>
    <string name="notifications_key" translatable="false">notifications</string>
    <string name="notification_enabled_value" translatable="false">1</string>
    <string name="sightseeing_key" translatable="false">sightseeing</string>
    <string name="eat_drink_key" translatable="false">eat_and_drink</string>
    <string name="nightlife_key" translatable="false">nightlife</string>
    <string name="hotel_key" translatable="false">hotel</string>
    <string name="bookable_key" translatable="false">bookable</string>
    <string name="bookable_title">Bookable venues</string>
    <string name="bookable_summary">Show only bookable venues(Price info is subject to providers.)</string>
    <string name="bookable_disabled_value">0</string>
    <string name="sightseeing_score_title">Sightseeing score</string>
    <string name="eat_and_drink_score_title">Eat &amp; drink score</string>
    <string name="nightlife_score_title">Nightlife score</string>
    <string name="hotel_score_title">Hotel score</string>
    <string name="seven_and_greater_value" translatable="false">>=7</string>
    <string name="tours_key" translatable="false">private_tours</string>
    <string name="activities_key" translatable="false">do</string>
    <string name="multi_day_tours_key" translatable="false">multi_day_tours</string>
    <string name="day_trips_key" translatable="false">day_trips</string>
    <string name="city_walking_key" translatable="false">city_walking</string>
    <string name="tours_score_title">Tours score</string>
    <string name="activities_score_title">Activities score</string>
    <string name="multi_day_tours_score_title">Multi day tours score</string>
    <string name="day_trips_title">Day trips score</string>
    <string name="city_walking_title">City walking score</string>
    <string name="webview_title">External browser implementation</string>
    <string name="webview_key" translatable="false">internal-webview</string>
    <string name="external_browser_disabled_value" translatable="false">0</string>
    <string name="tts_header">Text-to-speech output</string>
    <string name="tts_title">Language</string>
    <string name="tts_key" translatable="false">tts</string>
    <string name="tts_intent_title">Text-to-speech options</string>
    <string name="tts_intent_summary">It allows to equalize different settings.</string>
    <string name="tts_intent_key">tts-intent</string>
    <string name="tts_us_language_value">us</string>
    <string name="about_key" translatable="false">about</string>
    <string name="open_source_key" translatable="false">open-source-libs</string>
    <string name="updates_key" translatable="false">updates</string>
    <string name="cache_key" translatable="false">cache</string>
    <string name="database_key" translatable="false">database</string>
    <string name="about_us_header">About us</string>
    <string name="open_source_header">Open Source Libraries</string>
    <string name="open_source_subtext">Libraries that we inspire!</string>
    <string name="updates_header">Check for Updates</string>
</resources>