<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menuAbout"
        android:title="@string/about_menu_text"
        app:showAsAction="never" />

    <item android:id="@+id/menuSettings"
        android:title="@string/settings_menu_text"
        app:showAsAction="never" />

    <item android:id="@+id/menuShare"
        android:title="@string/share_menu_text"
        app:showAsAction="never" />

    <item android:id="@+id/menuFeedback"
        android:title="@string/feedback_menu_text"
        app:showAsAction="never" />

    <item android:id="@+id/my_account"
        android:title="@string/my_account_menu_text"
        android:icon="@drawable/ic_account"
        app:showAsAction="ifRoom" />

</menu>