<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:paddingBottom="56dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/country_details_fifth_header_text"
            style="@style/CountryDetailContentHeaderTheme"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="8dp">

            <Button
                android:id="@+id/btnBackground"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/background_button_text"
                android:drawableStart="@drawable/ic_background_24dp"
                style="@style/CountryDetailButtonTheme"/>

            <View
                android:layout_width="16dp"
                android:layout_height="0dp" />

            <Button
                android:id="@+id/btnPracticalities"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/practicalities_button_text"
                android:drawableStart="@drawable/ic_practicalities_24dp"
                style="@style/CountryDetailButtonTheme"/>

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
</layout>