<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/tvCountryDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CountryDetailDescTheme"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="8dp">

            <Button
                android:id="@+id/btnCities"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cities_button_text"
                android:drawableStart="@drawable/ic_region_24dp"
                style="@style/CountryDetailButtonTheme"/>

            <View
                android:layout_width="16dp"
                android:layout_height="0dp" />

            <Button
                android:id="@+id/btnRegions"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/regions_button_text"
                android:drawableStart="@drawable/ic_regions_24dp"
                style="@style/CountryDetailButtonTheme"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="8dp">

            <Button
                android:id="@+id/btnNationalParks"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/national_parks_button_text"
                android:drawableStart="@drawable/ic_national_parks_24dp"
                style="@style/CountryDetailButtonTheme"/>

            <View
                android:layout_width="16dp"
                android:layout_height="0dp" />

            <Button
                android:id="@+id/btnIslands"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/islands_button_text"
                android:drawableStart="@drawable/ic_islands_24dp"
                style="@style/CountryDetailButtonTheme"/>

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
</layout>