<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

<android.support.constraint.ConstraintLayout
    android:id="@+id/clBottomSheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:behavior_hideable="false"
    app:behavior_peekHeight="56dp"
    android:background="@color/colorWhite"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <TextView
        android:id="@+id/tvExploreHeader"
        style="@style/NearbyExploreHeaderTextTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|start"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tvExploreHeader">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/tvRestaurant"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/restaurants"
                android:drawableTop="@drawable/ic_restaurant"
                style="@style/NearbyItemsTheme"/>

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/tvCafe"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cafes"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:drawableTop="@drawable/ic_cafe"
                style="@style/NearbyItemsTheme"/>

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/tvGasStation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/gas_stations"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:drawableTop="@drawable/ic_gas_stations"
                style="@style/NearbyItemsTheme"/>

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/tvATM"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/atms"
                android:drawableTop="@drawable/ic_atm"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                style="@style/NearbyItemsTheme"/>

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/tvPharmacy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pharmacies"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:drawableTop="@drawable/ic_pharmacy"
                style="@style/NearbyItemsTheme"/>

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/tvGrocery"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/groceries"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:drawableTop="@drawable/ic_grocery"
                style="@style/NearbyItemsTheme"/>

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
    </android.support.design.widget.CoordinatorLayout>
</layout>